--- a/default/data/ui/views/energy.xml
+++ b/default/data/ui/views/energy.xml
@@ -1,4 +1,4 @@
-<form refresh="60">
+<form>
   <label>Energy</label>
   <row>
     <panel>
@@ -23,8 +23,10 @@
         <option name="drilldown">none</option>
       </single>
     </panel>
+  </row>
+  <row>
     <panel>
-      <single>
+      <chart>
         <title>Current Battery Level</title>
         <search>
           <query>eventtype=thingsee_energy_current_battery_level |stats latest(value) as current_battery_level</query>
@@ -45,11 +47,31 @@
         <option name="rangeValues">[0,30,70,100]</option>
         <option name="trendInterval">auto</option>
         <option name="linkView">search</option>
-        <option name="drilldown">none</option>
-      </single>
+        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.visibility">visible</option>
+        <option name="charting.axisTitleY2.visibility">visible</option>
+        <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">false</option>
+        <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">markerGauge</option>
+        <option name="charting.chart.bubbleMaximumSize">50</option>
+        <option name="charting.chart.bubbleMinimumSize">10</option>
+        <option name="charting.chart.bubbleSizeBy">area</option>
+        <option name="charting.chart.nullValueMode">gaps</option>
+        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
+        <option name="charting.chart.stackMode">default</option>
+        <option name="charting.chart.style">shiny</option>
+        <option name="charting.drilldown">all</option>
+        <option name="charting.layout.splitSeries">0</option>
+        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
+        <option name="charting.legend.placement">right</option>
+        <option name="charting.chart.rangeValues">["0","10","30","100"]</option>
+        <option name="charting.gaugeColors">[0xd13b3b,0xFFE800,0x7e9f44]</option>
+      </chart>
     </panel>
-  </row>
-  <row>
     <panel>
       <input type="time" token="timepicker" searchWhenChanged="true">
         <label></label>
@@ -59,9 +81,9 @@
         </default>
       </input>
       <chart>
-        <title>Current Battery Level</title>
+        <title>Battery Level</title>
         <search>
-          <query>eventtype=thingsee_energy_current_battery_level |timechart avg(value) as current_battery_level</query>
+          <query>eventtype=thingsee_energy_current_battery_level |timechart avg(value) as battery_level</query>
           <earliest>$timepicker.earliest$</earliest>
           <latest>$timepicker.latest$</latest>
         </search>
@@ -72,7 +94,7 @@
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
-        <option name="charting.axisY2.enabled">0</option>
+        <option name="charting.axisY2.enabled">false</option>
         <option name="charting.axisY2.scale">inherit</option>
         <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
@@ -89,6 +111,9 @@
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
         <option name="charting.axisTitleY.text">%</option>
+        <option name="charting.axisLabelsY.majorUnit">10</option>
+        <option name="charting.axisY.maximumNumber">100</option>
+        <option name="charting.axisY.minimumNumber">0</option>
       </chart>
     </panel>
   </row>
