--- a/default/data/ui/views/environment.xml
+++ b/default/data/ui/views/environment.xml
@@ -1,4 +1,4 @@
-<form refresh="60">
+<form>
   <label>Environment</label>
   <fieldset submitButton="false">
     <input type="time" token="timepicker" searchWhenChanged="true">
@@ -44,8 +44,6 @@
         <option name="charting.axisTitleY.text">°C</option>
       </chart>
     </panel>
-  </row>
-  <row>
     <panel>
       <chart>
         <title>Air Pressure</title>
@@ -114,6 +112,38 @@
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
         <option name="charting.axisTitleY.text">%</option>
+      </chart>
+    </panel>
+    <panel>
+      <chart>
+        <title>Luminance</title>
+        <search>
+          <query>eventtype=thingsee_environment_luminance |timechart avg(value) as avg_luminance</query>
+          <earliest>$timepicker.earliest$</earliest>
+          <latest>$timepicker.latest$</latest>
+        </search>
+        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.visibility">visible</option>
+        <option name="charting.axisTitleY2.visibility">visible</option>
+        <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">false</option>
+        <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
+        <option name="charting.chart.bubbleMaximumSize">50</option>
+        <option name="charting.chart.bubbleMinimumSize">10</option>
+        <option name="charting.chart.bubbleSizeBy">area</option>
+        <option name="charting.chart.nullValueMode">gaps</option>
+        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
+        <option name="charting.chart.stackMode">default</option>
+        <option name="charting.chart.style">shiny</option>
+        <option name="charting.drilldown">all</option>
+        <option name="charting.layout.splitSeries">0</option>
+        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
+        <option name="charting.legend.placement">right</option>
+        <option name="charting.axisTitleY.text">lux</option>
       </chart>
     </panel>
   </row>
