--- a/default/data/ui/views/location.xml
+++ b/default/data/ui/views/location.xml
@@ -14,9 +14,9 @@
       <map>
         <title>Location</title>
         <search>
-          <query>eventtype="thingsee_location"  | eval mvzipped=mvzip(property,value,":") | eval altitude_string=mvindex(mvzipped,mvfind(mvzipped,"altitude"))  | eval longitude_string=mvindex(mvzipped,mvfind(mvzipped,"longitude"))  | eval latitude_string=mvindex(mvzipped,mvfind(mvzipped,"latitude")) | rex field=altitude_string ":(?&lt;altitude&gt;\S+)" | rex field=longitude_string ":(?&lt;longitude&gt;\S+)" | rex field=latitude_string ":(?&lt;latitude&gt;\S+)" | stats latest(altitude) as altitude latest(latitude) as latitude latest(longitude) as longitude |geostats latfield=latitude longfield=longitude count</query>
-          <earliest>-24h@h</earliest>
-          <latest>now</latest>
+          <query>eventtype="thingsee_location"  |stats count by latitude, longitude</query>
+          <earliest>$timepicker.earliest$</earliest>
+          <latest>$timepicker.latest$</latest>
         </search>
         <option name="mapping.choroplethLayer.colorBins">5</option>
         <option name="mapping.choroplethLayer.colorMode">auto</option>
@@ -25,21 +25,22 @@
         <option name="mapping.choroplethLayer.neutralPoint">0</option>
         <option name="mapping.choroplethLayer.shapeOpacity">0.75</option>
         <option name="mapping.choroplethLayer.showBorder">1</option>
-        <option name="mapping.data.maxClusters">100</option>
+        <option name="mapping.data.maxClusters">50000</option>
         <option name="mapping.drilldown">all</option>
-        <option name="mapping.map.center">(0,0)</option>
+        <option name="mapping.map.center">(50.18,5.01)</option>
         <option name="mapping.map.panning">true</option>
         <option name="mapping.map.scrollZoom">false</option>
-        <option name="mapping.map.zoom">2</option>
-        <option name="mapping.markerLayer.markerMaxSize">50</option>
+        <option name="mapping.map.zoom">3</option>
+        <option name="mapping.markerLayer.markerMaxSize">11</option>
         <option name="mapping.markerLayer.markerMinSize">10</option>
         <option name="mapping.markerLayer.markerOpacity">0.8</option>
         <option name="mapping.showTiles">1</option>
-        <option name="mapping.tileLayer.maxZoom">7</option>
+        <option name="mapping.tileLayer.maxZoom">19</option>
         <option name="mapping.tileLayer.minZoom">0</option>
         <option name="mapping.tileLayer.tileOpacity">1</option>
         <option name="mapping.type">marker</option>
         <option name="drilldown">all</option>
+        <option name="mapping.tileLayer.url">http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png</option>
       </map>
     </panel>
   </row>
@@ -48,7 +49,7 @@
       <chart>
         <title>Altitude</title>
         <search>
-          <query>eventtype="thingsee_location"  | eval mvzipped=mvzip(property,value,":") | eval altitude_string=mvindex(mvzipped,mvfind(mvzipped,"altitude"))  | eval longitude_string=mvindex(mvzipped,mvfind(mvzipped,"longitude"))  | eval latitude_string=mvindex(mvzipped,mvfind(mvzipped,"latitude")) | rex field=altitude_string ":(?&lt;altitude&gt;\S+)" | rex field=longitude_string ":(?&lt;longitude&gt;\S+)" | rex field=latitude_string ":(?&lt;latitude&gt;\S+)" | timechart avg(altitude) as altitude</query>
+          <query>eventtype="thingsee_location"  | timechart avg(altitude) as altitude</query>
           <earliest>$timepicker.earliest$</earliest>
           <latest>$timepicker.latest$</latest>
         </search>
