--- a/default/data/ui/views/tracking.xml
+++ b/default/data/ui/views/tracking.xml
@@ -1,30 +1,28 @@
 <form>
-  <label>Current Location</label>
+  <label>Tracking</label>
   <fieldset submitButton="false">
-    <input type="time" token="timepicker">
+    <input type="time" token="timepicker" searchWhenChanged="true">
       <label></label>
       <default>
-        <earliest>-24h@h</earliest>
+        <earliest>-60m@m</earliest>
         <latest>now</latest>
       </default>
     </input>
   </fieldset>
+  <search id="locations_base_search">
+    <query>eventtype="thingsee_location" |stats count by latitude, longitude, _time |sort _time | eval coordinates=latitude.",".longitude  |autoregress coordinates as previous_coordinates | eval previous_coordinates=ifnull(previous_coordinates, coordinates, previous_coordinates) | haversine originField=previous_coordinates inputFieldLat=latitude inputFieldLon=longitude units=km</query>
+    <earliest>$timepicker.earliest$</earliest>
+    <latest>$timepicker.latest$</latest>
+  </search>
   <row>
     <panel>
       <map>
-        <title>Location</title>
+        <title>Location History</title>
         <search>
-          <query>eventtype="thingsee_location"  |stats  latest(latitude) as latitude latest(longitude) as longitude count</query>
+          <query>eventtype="thingsee_location"  |stats count by latitude, longitude</query>
           <earliest>$timepicker.earliest$</earliest>
           <latest>$timepicker.latest$</latest>
         </search>
-        <option name="mapping.choroplethLayer.colorBins">5</option>
-        <option name="mapping.choroplethLayer.colorMode">auto</option>
-        <option name="mapping.choroplethLayer.maximumColor">0xDB5800</option>
-        <option name="mapping.choroplethLayer.minimumColor">0x2F25BA</option>
-        <option name="mapping.choroplethLayer.neutralPoint">0</option>
-        <option name="mapping.choroplethLayer.shapeOpacity">0.75</option>
-        <option name="mapping.choroplethLayer.showBorder">1</option>
         <option name="mapping.data.maxClusters">50000</option>
         <option name="mapping.drilldown">all</option>
         <option name="mapping.map.center">(50.18,5.01)</option>
@@ -42,6 +40,87 @@
         <option name="drilldown">all</option>
         <option name="mapping.tileLayer.url">http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png</option>
       </map>
+    </panel>
+  </row>
+  <row>
+    <panel>
+      <single>
+        <title>Start Time</title>
+        <search base="locations_base_search">
+          <query>stats earliest(_time) as starttime  | convert timeformat="%d.%m.%Y %H:%M:%S" ctime(starttime) AS starttime</query>
+        </search>
+        <option name="wrap">undefined</option>
+        <option name="rowNumbers">undefined</option>
+        <option name="drilldown">none</option>
+        <option name="linkView">search</option>
+      </single>
+      <single>
+        <title>End Time</title>
+        <search base="locations_base_search">
+          <query>stats latest(_time) as endtime | convert timeformat="%d.%m.%Y %H:%M:%S" ctime(endtime) AS endtime</query>
+        </search>
+        <option name="wrap">undefined</option>
+        <option name="rowNumbers">undefined</option>
+        <option name="drilldown">none</option>
+        <option name="linkView">search</option>
+      </single>
+      <single>
+        <title>Total Distance</title>
+        <search base="locations_base_search">
+          <query>stats sum(distance) as total_distance |eval total_distance=round(total_distance,3)</query>
+        </search>
+        <option name="wrap">undefined</option>
+        <option name="rowNumbers">undefined</option>
+        <option name="drilldown">none</option>
+        <option name="linkView">search</option>
+        <option name="afterLabel">km</option>
+      </single>
+      <single>
+        <title>Average Speed</title>
+        <search base="locations_base_search">
+          <query>stats range(_time) as duration sum(distance) as total_distance |eval total_distance=round(total_distance,2) | eval average_speed=round(total_distance/(duration/60/60),3) |table average_speed</query>
+        </search>
+        <option name="drilldown">none</option>
+        <option name="linkView">search</option>
+        <option name="afterLabel">km/h</option>
+      </single>
+    </panel>
+    <panel>
+      <table>
+        <title>Location History - Details</title>
+        <search base="locations_base_search">
+          <query>|table _time, latitude, longitude, distance | sort - _time</query>
+        </search>
+        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.visibility">visible</option>
+        <option name="charting.axisTitleY2.visibility">visible</option>
+        <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">false</option>
+        <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">column</option>
+        <option name="charting.chart.bubbleMaximumSize">50</option>
+        <option name="charting.chart.bubbleMinimumSize">10</option>
+        <option name="charting.chart.bubbleSizeBy">area</option>
+        <option name="charting.chart.nullValueMode">gaps</option>
+        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
+        <option name="charting.chart.stackMode">default</option>
+        <option name="charting.chart.style">shiny</option>
+        <option name="charting.drilldown">all</option>
+        <option name="charting.layout.splitSeries">0</option>
+        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
+        <option name="charting.legend.placement">bottom</option>
+        <option name="charting.axisLabelsY.majorUnit">1</option>
+        <option name="charting.axisY.maximumNumber">1</option>
+        <option name="charting.axisY.minimumNumber">0</option>
+        <option name="wrap">true</option>
+        <option name="rowNumbers">false</option>
+        <option name="dataOverlayMode">none</option>
+        <option name="drilldown">cell</option>
+        <option name="count">10</option>
+      </table>
     </panel>
   </row>
   <row>
@@ -81,8 +160,6 @@
         <option name="charting.axisTitleY.text">m</option>
       </chart>
     </panel>
-  </row>
-  <row>
     <panel>
       <chart>
         <title>Accuracy</title>
@@ -113,40 +190,6 @@
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">bottom</option>
         <option name="charting.axisTitleY.text">m</option>
-      </chart>
-    </panel>
-    <panel>
-      <chart>
-        <title>Geofence</title>
-        <search>
-          <query>eventtype="thingsee_location_geofence_inside" |timechart max(is_inside_geofence) as is_inside_geofence</query>
-          <earliest>$timepicker.earliest$</earliest>
-          <latest>$timepicker.latest$</latest>
-        </search>
-        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
-        <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
-        <option name="charting.axisTitleX.visibility">visible</option>
-        <option name="charting.axisTitleY.visibility">visible</option>
-        <option name="charting.axisTitleY2.visibility">visible</option>
-        <option name="charting.axisX.scale">linear</option>
-        <option name="charting.axisY.scale">linear</option>
-        <option name="charting.axisY2.enabled">false</option>
-        <option name="charting.axisY2.scale">inherit</option>
-        <option name="charting.chart">column</option>
-        <option name="charting.chart.bubbleMaximumSize">50</option>
-        <option name="charting.chart.bubbleMinimumSize">10</option>
-        <option name="charting.chart.bubbleSizeBy">area</option>
-        <option name="charting.chart.nullValueMode">gaps</option>
-        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
-        <option name="charting.chart.stackMode">default</option>
-        <option name="charting.chart.style">shiny</option>
-        <option name="charting.drilldown">all</option>
-        <option name="charting.layout.splitSeries">0</option>
-        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
-        <option name="charting.legend.placement">bottom</option>
-        <option name="charting.axisLabelsY.majorUnit">1</option>
-        <option name="charting.axisY.maximumNumber">1</option>
-        <option name="charting.axisY.minimumNumber">0</option>
       </chart>
     </panel>
   </row>
