--- a/default/data/ui/views/environment.xml
+++ b/default/data/ui/views/environment.xml
@@ -19,8 +19,7 @@
       <fieldForValue>dvc_id</fieldForValue>
       <prefix>dvc_id="*</prefix>
       <suffix>"</suffix>
-      <choice value="unknown">unknown</choice>
-      <default>unknown</default>
+      <selectFirstChoice>true</selectFirstChoice>
     </input>
   </fieldset>
   <row>
